--- a/CSS/styal.css
+++ b/CSS/styal.css
@@ -9,7 +9,7 @@ font-family: Arial, Helvetica, sans-serif;
     background-image: url(/img/5172658.jpg);
     background-position: center;
     background-size: cover;
-    height: 100vh;
+    height: 200vh;
 }
 
 .ft-color{
@@ -18,8 +18,10 @@ font-family: Arial, Helvetica, sans-serif;
   letter-spacing:10px ;
 }
 .title{
-    color: aliceblue;
-font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color:blanchedalmond;
+    background-image: url(/img/dots.png);
+
+font-family:inherit;
     letter-spacing:30px ;
     font-weight: 600;
   }
