--- a/CSS/styal.css
+++ b/CSS/styal.css
@@ -5,12 +5,12 @@ font-family: Arial, Helvetica, sans-serif;
 }
 
 
-.back-ground{
-    background-image: url(/img/5172658.jpg);
+ .back-ground{
+    background-image: url('/img/blue-lines-abstract-wallpaper.jpg');
     background-position: center;
     background-size: cover;
     height: 200vh;
-}
+} 
 
 .ft-color{
     color: aliceblue;
@@ -19,7 +19,8 @@ font-family: Arial, Helvetica, sans-serif;
 }
 .title{
     color:blanchedalmond;
-    background-image: url(/img/dots.png);
+    
+    background-image:  url("/img/dots.png");
 
 font-family:inherit;
     letter-spacing:30px ;
