--- a/CSS/styal.css
+++ b/CSS/styal.css
@@ -2,29 +2,31 @@ body{
 box-sizing: border-box;
 margin: o;
 font-family: Arial, Helvetica, sans-serif;
+ 
 }
 
-
- .back-ground{
+.color-bg{
+  background-color:darkslateblue;
+}
+ /* .back-ground{
     background-image: url('/img/blue-lines-abstract-wallpaper.jpg');
     background-position: center;
     background-size: cover;
     height: 200vh;
-} 
+}  */
 
 .ft-color{
     color: aliceblue;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Impact,'Arial Narrow Bold', sans-serif;
   letter-spacing:10px ;
 }
 .title{
     color:blanchedalmond;
-    
-    background-image:  url("/img/dots.png");
-
-font-family:inherit;
+    background-image:url("/img/dots.png");
+    font-family:inherit;
     letter-spacing:30px ;
     font-weight: 600;
+
   }
 
 .textarea{
