--- a/CSS/styal.css
+++ b/CSS/styal.css
@@ -6,7 +6,8 @@ font-family: Arial, Helvetica, sans-serif;
 }
 
 .color-bg{
-  background-color:dimgray;
+  background-color:rgba(164, 24, 164, 0.817);
+
 }
  .back-ground{
     /* background-image: url('/img/blue-lines-abstract-wallpaper.jpg'); */
